// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Job /> when it has complete data should be same as snapshot 1`] = `
<div
  className="job"
>
  <h1>
    Frontend Developer
  </h1>
  <h2>
    Partner Studio
  </h2>
  <div
    className="skill-tags"
  >
    <span
      className="skill-tag"
    >
      JavaScript
    </span>
    <span
      className="skill-tag"
    >
      CSS
    </span>
  </div>
</div>
`;

exports[`<Job /> when it lack of tag data should be same as snapshot 1`] = `
<div
  className="job"
>
  <h1>
    Frontend Developer
  </h1>
  <h2>
    Partner Studio
  </h2>
  <div
    className="skill-tags"
  />
</div>
`;
